Poprawki mutability java 17